test/seq/cmdlists/invalid_cmd.err
SyntaxError: Unknown command name
Line: 3
not_a_command
~~~~~~~~~~~~~
